@@ -81,16 +81,16 @@
 .Sh NAME
 qstat \- show status of pbs batch jobs
 .Sh SYNOPSIS
-qstat [-f][-W site_specific] [\^job_identifier... | destination...\^]
+qstat [-f [-1]][-W site_specific] [\^job_identifier... | destination...\^]
 .sp
 qstat [-a|-i|-r|-e] [-n [-1]] [-s] [-G|-M] [-R] [-u user_list] [\^job_identifier... |\ 
 destination...\^]
 .sp
-qstat -Q [-f][-W site_specific] [\^destination...\^]
+qstat -Q [-f [-1]][-W site_specific] [\^destination...\^]
 .sp
 qstat -q [-G|-M] [\^destination...\^]
 .sp
-qstat -B [-f][-W site_specific] [\^server_name...\^]
+qstat -B [-f [-1]][-W site_specific] [\^server_name...\^]
 .Sh DESCRIPTION
 The
 .B qstat
@@ -152,7 +152,9 @@ running are displayed,  this includes jobs which are suspended.
 .IP "-n" 10
 In addition to the basic information, nodes allocated to a job are listed.
 .IP "-1" 10
-In combination with the -n, the -1 option puts all of the nodes on the same line as the job ID.  This is intended to ease the parsing of the qstat output.
+In combination with -n, the -1 option puts all of the nodes on the same line as
+the job ID.  In combination with -f, attributes are not folded to fit in a
+terminal window.  This is intended to ease the parsing of the qstat output.
 .IP "-s" 10
 In addition to the basic information, any comment provided by the batch
 administrator or scheduler is shown.
