@@ -13,6 +13,7 @@
   avoid dup streams with nodes for quicker pbs_server startup (USC)
   configure program prefix/suffix will now across all subcomponents (USC)
   handle shared libs in tpackages (USC)
+  qstat's -1 option can now be used with -f for easier parsing (USC)
 
 2.1.0p0
 
